--- a/Consegna Printf/Makefile
+++ b/Consegna Printf/Makefile
@@ -5,16 +5,30 @@ CFLAGS = -Wall -Wextra -Werror
 RM = rm -f
 AR = ar rcs
 
-SRC = ft_printf.c ft_printf_utils.c ft_printf_flags.c
+SRC = ./ft_printf.c \
+	./ft_printf_flags.c \
+	./ft_printf_handlers_basic.c \
+	./ft_printf_handlers_hex.c \
+	./ft_printf_handlers_number.c \
+	./ft_printf_utils.c \
+	./ft_printf_utils_bonus.c \
+	./ft_printf_utils_hex.c \
+	./ft_printf_utils_number.c
+
 OBJS = $(SRC:.c=.o)
 
 all: $(NAME)
 
+bonus: all
+
 $(NAME): $(OBJS)
+	$(MAKE) -C libft
+	cp libft/libft.a ./$(NAME)
 	$(AR) $(NAME) $(OBJS)
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@ -I.
+
 
 clean:
 	$(RM) $(OBJS)
